# mini_plague_simulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  plague_simulation
.cache/clangd/index/: main.cpp.39CB72F54EC47430.idx
src/: main.cpp
